--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datdot-ui-button",
-  "version": "0.0.0",
+  "version": "0.0.0-prealpha",
   "description": "example ui components",
   "main": "src/index.js",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/playproject-io/datdot-ui-button.git"
+    "url": "git+https://github.com/datdot-ui/button.git"
   },
   "keywords": [
     "datdot",
@@ -22,17 +22,17 @@
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/playproject-io/datdot-ui-button/issues"
+    "url": "https://github.com/datdot-ui/button/issues"
   },
-  "homepage": "https://github.com/playproject-io/datdot-ui-button#readme",
+  "homepage": "https://github.com/datdot-ui/button#readme",
   "devDependencies": {
     "budo": "^11.6.4",
-    "ui-domlog": "github:fionataeyang/ui-domlog"
+    "ui-domlog": "github:datdot-ui/ui-domlog#v0.0.0-prealpha"
   },
   "dependencies": {
     "bel": "^6.0.0",
     "csjs-inject": "^1.0.1",
-    "datdot-ui-graphic": "github:fionataeyang/datdot-ui-graphic",
+    "datdot-ui-graphic": "github:datdot-ui/icon#v0.0.0-prealpha",
     "debug": "^4.1.1"
   }
 }
