--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datdot-ui-button",
-  "version": "1.0.0",
+  "version": "0.0.0-alpha",
   "description": "datdot ui widget",
   "main": "src/index.js",
   "scripts": {
@@ -26,13 +26,13 @@
   "homepage": "https://github.com/playproject-io/datdot-ui-button#readme",
   "devDependencies": {
     "budo": "^11.6.4",
-    "datdot-terminal": "github:datdot-ui/terminal#v0.0.1-alpha"
+    "datdot-terminal": "github:datdot-ui/terminal#v0.0.0-alpha"
   },
   "dependencies": {
     "bel": "^6.0.0",
     "csjs-inject": "^1.0.1",
-    "datdot-ui-icon": "github:datdot-ui/icon#0.0.0-alpha",
-    "datdot-ui-list": "github:datdot-ui/list#v0.0.1-alpha",
+    "datdot-ui-icon": "github:datdot-ui/icon#v0.0.0-alpha",
+    "datdot-ui-list": "github:datdot-ui/list#v0.0.0-alpha",
     "debug": "^4.1.1"
   }
 }
